--- a/Source/Properties/Resources.resx
+++ b/Source/Properties/Resources.resx
@@ -118,10 +118,10 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="Launcherx2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Launcherx2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Launcherv3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Launcherv31.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Launcherx2_realms" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Launcherx2_realms.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Launcherv2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Launcherv21.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
