--- a/Source/Properties/Resources.resx
+++ b/Source/Properties/Resources.resx
@@ -130,4 +130,10 @@
   <data name="messagebox" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\messagebox.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="addrealm_button" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\addrealm_button.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="addrealm_button_depressed" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\addrealm_button_depressed.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
